:sparkles: Construção do styles.css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
+    <!-- Servidores de Fontes do Google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <!-- Fonte do Google - Poppins -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+    <!-- Padrão de Caracteres -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -13,6 +22,10 @@
     <link rel="icon" type="image/svg+xml" href="./assets/img/">
 
     <title>Portfolio da Milena</title>
+
+    <!-- Link para o arquivo CSS -->
+    <link rel="stylesheet" href="./assets/css/styles.css">
+
 </head>
 <body>
 
@@ -38,7 +51,7 @@
     
         <section id="hero" class="hero_container">
 
-            <article class=""hero_content>
+            <article class="hero_content">
                 <h4>👋 Olá, eu sou Milena</h4>
                 <h1>Desenvolvedora Full Stack</h1>
                 <p>Transformo ideias em código e crio experiências digitais incríveis</p>
@@ -74,10 +87,12 @@
 
                 <div class="about_stats">
                     <a href="#" target="_blank" class="botao">Ver GitHub</a>
+
                     <div class="stat-item">
                         <p class="stat-number">100</p>
                         <p class="stat-label">Seguidores</p>   
-                </div>
+                    </div>
+
                    <div class="stat-item">
                       <p class="stat-number">50</p>
                       <p class="stat-label">Repositórios</p>   
@@ -117,7 +132,7 @@
                 <input id="email" name="email" type="text" placeholder="Digite o seu e-mail">
                 <span id="txtemail"></span>
 
-                <label for="assuntoa">Assunto</label>
+                <label for="assunto">Assunto</label>
                 <input id="assunto" name="assunto" type="text" placeholder="Digite o assunto da mensagem">
                 <span id="txtAssunto"></span>
 
