sparkles: Atualizações na página index.html

--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
                 <h4>Entre em Contato</h4>
                 <p>Sinta-se à vontade para entrar em contato comigo!</p>
                 <div class="social_container">
-                    <a href="#" target="_blank" class="social_icon">
+                    <a href="https://www.linkedin.com/in/milenasoliv/" target="_blank" class="social_icon">
                         <img
                             src="./assets/img/linkedin.svg"
-                            alt="https://www.linkedin.com/in/milenasoliv/"
+                            alt="LinkedIn"
                         >
                     </a>
-                    <a href="#" target="_blank" class="social_icon">
+                    <a href="https://github.com/misoliv" target="_blank" class="social_icon">
                         <img
                             src="./assets/img/github.svg"
-                            alt="https://github.com/misoliv"
+                            alt="GitHub"
                         >
                     </a>
                 </div>
@@ -112,7 +112,7 @@
             <form action="https://formsubmit.co/e1b50c35ca06dc243902b6380e35e849
             " method="POST" id="formulario">
 
-                <input type="hidden" name="_next" value="http://127.0.0.1:5501/sucess.html">
+                <input type="hidden" name="_next" value="https://misoliv.github.io/PORTFOLIO_GENERATION/">
                 <input type="hidden" name="_captcha" value="false">
                 
                 <label for="nome">Nome</label>
