:sparkles: Atualização do Portfólio

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <!-- Fonte do Google - Poppins -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+     <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
     
     <!--PADRÃO DE CARACTERES -->
     <meta charset="UTF-8">
@@ -23,7 +23,7 @@
     <meta name="robots" content="index, follow">
 
     <!-- FAVICON -->
-    <link rel="icon" type="image/svg+xml" href="./assets/img/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="#">
 
     <!-- Link para o arquivo CSS -->
     <link rel="stylesheet" href="./assets/css/styles.css"> 
@@ -60,7 +60,7 @@
 
             <!-- BOAS VINDAS -->
             <article class="hero_content">
-                <h4>👋 Olá, eu sou Milena</h4>
+                <h4>👋 Olá, eu a sou Milena</h4>
                 <h1>Desenvolvedora Full Stack</h1>
                 <p>Transformo ideias em código e crio experiências digitais incríveis.</p>
                 <div class="hero_buttons">
@@ -72,7 +72,7 @@
             <!-- IMAGEM COM ANIMAÇÃO -->
             <figure class="hero_image">
                 <img
-                    src="./assets/img/dev_woman.svg"
+                    src="./assets/img/mi1.svg"
                     alt="Ilustração com uma pessoa desenvolvedora escrevendo código."
                     class="ilustracao float-animation"
                 >
@@ -138,7 +138,7 @@
 
     <!-- FOOTER -->
     <footer>
-        Feito com ❤️ por Milena Svitras - 2025
+        Milena Svitras - 2025
     </footer>
 
     <!-- Script JavaScript -->
