:sparkles: Atualização da imagem

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <!-- IMAGEM COM ANIMAÇÃO -->
             <figure class="hero_image">
                 <img
-                    src="./assets/img/mi1.svg"
+                    src="./assets/img/mi.svg"
                     alt="Ilustração com uma pessoa desenvolvedora escrevendo código."
                     class="ilustracao float-animation"
                 >
